--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.569 $
+    $Revision: 1.580 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -353,7 +353,7 @@ IMAP SERVERS
      - Gimap (Gmail imap)
      - GMX IMAP4 StreamProxy.
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
-     - hMailServer 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
+     - hMailServer 5.40-B1950 [host12], 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
      - IceWarp Server 10.4.5 [host1] (http://www.icewarp.com/)
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
@@ -471,5 +471,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.569 2013/10/16 21:58:17 gilles Exp gilles $
+    $Id: imapsync,v 1.580 2013/12/25 02:52:36 gilles Exp gilles $
 
