--- a/W/Mail-IMAPClient-3.35/Changes
+++ b/W/Mail-IMAPClient-3.35/Changes
@@ -5,6 +5,21 @@ Changes from 2.99_01 to 3.16    made by Mark Overmeer
 Changes from 0.09    to 2.99_01 made by David Kernen
 	- Potential compatibility issues from 3.17+ highlighted with '*'
 
+version 3.35: Fri, Nov 22, 2013  2:18:41 PM
+	- *use Quote() over Massage() to avoid stripping double quotes from arg
+	  + removed constant NonFolderArg
+	  + may deprecate Massage() in a future release
+	- _list_or_lsub failed to handle folder names with double quotes
+	  + cleanup Escaped_results()
+	  + new methods: Escaped_history() _escaped_trans_data()
+	  + removed method: _list_response_preprocess()
+	  [Gilles Lamiral, Victor Lé]
+	- rt.cpan.org#90315: getacl on a folder returned as literal failed
+	  + _read_line could remove extra space when literal data was received
+	  [Carl Karcher]
+	- rt.cpan.org#89040: typo fixes
+	  [David Steinbrunner]
+
 version 3.34: Fri, Sep 27, 2013 12:50:17 AM
 	- make Makefile.PL use non-interactive and document test.txt usage
 	- new attribute: Socketargs => [ (IO::Socket::.. args) ]
